[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/models/the_assassins/enemy_droid.obj" type="ArrayMesh" id=1]
[ext_resource path="res://EnemyDroid.gd" type="Script" id=2]
[ext_resource path="res://Resources/Cyan_Material.tres" type="Material" id=3]
[ext_resource path="res://Assets/sfx/launches/flaunch.wav" type="AudioStream" id=4]

[sub_resource type="CylinderShape" id=1]
radius = 0.504654
height = 1.4635

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 0, 1, 0, -10, 0, -10, -10, 2, -10, 10, 0, -10, 10, 2, -10 )

[node name="EnemyDroid" type="KinematicBody"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.44667, 0.00878421, -1.36257 )
mesh = ExtResource( 1 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.723337, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="Muzzle" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17032, -0.835943 )

[node name="Audio_Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Death_Timer" type="Timer" parent="."]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="Death_Timer" to="." method="_on_Death_Timer_timeout"]
